cleanup: clean up top-level CMakeLists.txt
This change organizes and cleans up the top-level cmake rules. There
*should* be no functional changes here, but cmake is subtle.

In particular, the following is being done:
* The warnings and compile settings are centralized, since they apply
  universally (and don't need special setting in test/).
* Overlapping warnings are removed where possible (covered by multiple
  flags).
* The sections are organized to allow the file to be more readable, e.g.
  all Cmake-specific internal settings are moved to the top, rather than
  being more scattered.

This change is preparation for changes where the custom pieces and
packages can be split out in favor of an even simpler structure, e.g.
don't build tests if `gtest` is not present rather than having a
specific override setting.

This will allow us to ensure that the NIX development environment is
complete, and that we build all targets all the time in CI, rahter than
allow some targets behind flags to die off (like the fuzzing code has).

The minor change to the `PassManager` is simply working around a
"maybe-uninitializer" warning in the `std::function` copy constructor.

Signed-off-by: Adin Scannell <amscanne@meta.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,13 @@
 cmake_minimum_required(VERSION 3.14)
 project(bpftrace)
 
-cmake_policy(SET CMP0057 NEW)
-
 # bpftrace version number components.
 set(bpftrace_VERSION_MAJOR 0)
 set(bpftrace_VERSION_MINOR 24)
 set(bpftrace_VERSION_PATCH 0)
 
-include(GNUInstallDirs)
-
-set(WARNINGS_AS_ERRORS OFF CACHE BOOL "Build with -Werror")
-set(HARDENED_STDLIB OFF CACHE BOOL "Enable hardened definitions for standard library (for development use only)")
+# project settings.
 set(STATIC_LINKING OFF CACHE BOOL "Build bpftrace as a statically linked executable")
-
 set(BUILD_ASAN OFF CACHE BOOL "Build bpftrace with -fsanitize=address")
 set(BUILD_UBSAN OFF CACHE BOOL "Build bpftrace with -fsanitize=undefined")
 set(ENABLE_MAN ON CACHE BOOL "Build man pages")
@@ -21,56 +15,30 @@ set(BUILD_TESTING ON CACHE BOOL "Build test suite")
 set(ENABLE_SYSTEMD OFF CACHE BOOL "Enable systemd integration")
 set(KERNEL_HEADERS_DIR "" CACHE PATH "Hard-code kernel headers directory")
 set(SYSTEM_INCLUDE_PATHS "auto" CACHE STRING "Hard-code system include paths (colon separated, the default value \"auto\" queries clang at runtime)")
+set(WARNINGS_AS_ERRORS OFF CACHE BOOL "Build with -Werror")
+set(HARDENED_STDLIB OFF CACHE BOOL "Enable hardened definitions for standard library (for development use only)")
+set(ENABLE_SKB_OUTPUT ON CACHE BOOL "Enable skb_output, will include libpcap")
 set(USE_SYSTEM_LIBBPF OFF CACHE BOOL
     "Use system libbpf instead of vendoring it from a submodule")
 
-set(ENABLE_SKB_OUTPUT ON CACHE BOOL "Enable skb_output, will include libpcap")
-
+# cmake settings & builtin modules.
+cmake_policy(SET CMP0057 NEW)
+cmake_policy(SET CMP0075 NEW)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+set_property(GLOBAL PROPERTY FIND_LIBRARY_USE_LIB64_PATHS TRUE)
+if(STATIC_LINKING)
+  set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
+  set(CMAKE_LINK_SEARCH_START_STATIC TRUE)
+  set(CMAKE_LINK_SEARCH_END_STATIC TRUE)
+endif(STATIC_LINKING)
 
-set (CMAKE_CXX_STANDARD 20)
-set (CMAKE_CXX_STANDARD_REQUIRED ON)
-set (CMAKE_CXX_EXTENSIONS OFF)
-
-add_compile_options("-Wall")
-add_compile_options("-Wextra")
-add_compile_options("-Werror=undef")
-add_compile_options("-Wpointer-arith")
-add_compile_options("-Wcast-align")
-add_compile_options("-Wwrite-strings")
-add_compile_options("-Wcast-qual")
-add_compile_options("-Wunreachable-code")
-add_compile_options("-Wdisabled-optimization")
-
-# libbpf has a standardized macro which requires partial initialization. In
-# general this is well-specified [1] and will zero-initialize (or run default
-# constructors) for non-specified fields, which is what we want. Therefore,
-# we disable this warning broadly and allow this syntax.
-# [1]: https://en.cppreference.com/w/cpp/language/aggregate_initialization.html
-add_compile_options("-Wno-missing-field-initializers")
-
-if(HARDENED_STDLIB)
-  add_compile_definitions("-D_LIBCPP_HARDENING_MODE=_LIBCPP_HARDENING_MODE_DEBUG")
-  add_compile_definitions("-D_GLIBCXX_ASSERTIONS")
-  if("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
-    # _FORTIFY_SOURCE requires at least -O1
-    add_compile_definitions("-D_FORTIFY_SOURCE=3")
-  endif()
-endif()
-
-if (WARNINGS_AS_ERRORS)
-  add_compile_options("-Werror")
-endif()
-
-# Clang compiler produces narrowing errors when calling BPF_LD_MAP_FD in the bcc library
-# Turning off them before bcc library fixes this
-if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-  add_compile_options("-Wno-narrowing")
-endif()
-
-include_directories(${CMAKE_SOURCE_DIR}/src)
-include_directories(${CMAKE_BINARY_DIR}/src)
-include_directories(${CMAKE_BINARY_DIR})
+include(GNUInstallDirs)
+include(CTest)
+include(CheckSymbolExists)
+include(CheckIncludeFile)
 
 # Ninja buffers output so gcc/clang think it's not an interactive session.
 # Colors are useful for compiler errors so force the color
@@ -82,18 +50,43 @@ if("${CMAKE_GENERATOR}" STREQUAL "Ninja")
   endif()
 endif()
 
-include(CTest)
+# compilation settings; all warnings are universally enabled and set as errors.
+# The additional enabled warnings are those not necessarily covered by `-Wextra`
+# and `-Wall`, and are generally desirable. In the future `-Wconversion` may be
+# enabled, but there are a large number of implicit conversions to be removed.
+add_compile_options("-Wall")
+add_compile_options("-Wextra")
+add_compile_options("-Wundef")
+add_compile_options("-Wnarrowing")
+add_compile_options("-Wpointer-arith")
+add_compile_options("-Wcast-align")
+add_compile_options("-Wcast-qual")
+add_compile_options("-Wwrite-strings")
+add_compile_options("-Werror")
 
-if(STATIC_LINKING)
-  set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
-  set(CMAKE_LINK_SEARCH_START_STATIC TRUE)
-  set(CMAKE_LINK_SEARCH_END_STATIC TRUE)
-endif(STATIC_LINKING)
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+  # Including the standard C++ <algorithms> header will always produce a false
+  # positive warning for certain versions when -O3 is specified [1]. In order
+  # to avoid this, just disable this check for release mode. The check will
+  # still apply for non-release modes, so we still have sufficient coverage.
+  # [1] https://gcc.gnu.org/bugzilla/show_bug.cgi?id=101361
+  add_compile_options("-Wno-stringop-overread")
+  # Similarly, it seems that std::function is a bit broken with the g++
+  # uninitialized values and -O3. The same logic allows us to disable this
+  # check here, since it will be caught well by other builds.
+  add_compile_options("-Wno-uninitialized")
+endif()
 
-set_property( GLOBAL PROPERTY FIND_LIBRARY_USE_LIB64_PATHS TRUE )
 
-include_directories(SYSTEM ${KERNEL_INCLUDE_DIRS})
+# Note: these can be replaced in the future by the `CMAKE_INCLUDE_CURRENT_DIR`
+# setting, but this requires additional workarounds for the current `resources`
+# library and the way that it is built.
+include_directories(${CMAKE_SOURCE_DIR}/src)
+include_directories(${CMAKE_BINARY_DIR})
 
+
+# Dependency declarations. In the future, these can be moved next to the actual
+# dependencies that need them, and the scope of the includes narrowed.
 find_package(ZLIB REQUIRED)
 include_directories(SYSTEM ${ZLIB_INCLUDE_DIRS})
 
@@ -129,11 +122,6 @@ add_library(parser STATIC ${BISON_bison_parser_OUTPUTS} ${FLEX_flex_lexer_OUTPUT
 target_compile_options(parser PRIVATE "-w")
 target_include_directories(parser PRIVATE src src/ast)
 
-include(CheckSymbolExists)
-set(CMAKE_REQUIRED_DEFINITIONS -D_GNU_SOURCE)
-check_symbol_exists(name_to_handle_at "sys/types.h;sys/stat.h;fcntl.h" HAVE_NAME_TO_HANDLE_AT)
-set(CMAKE_REQUIRED_DEFINITIONS)
-
 find_package(LibBfd)
 find_package(LibOpcodes)
 find_package(LibDw)
@@ -149,12 +137,9 @@ endif()
 
 find_package(LibBlazesym)
 
-if(POLICY CMP0075)
-  cmake_policy(SET CMP0075 NEW)
-endif()
-
-if(${LIBBFD_FOUND} AND ${LIBOPCODES_FOUND})
-  set(HAVE_BFD_DISASM TRUE)
+if(LIBBLAZESYM_FOUND)
+  set(BPFTRACE_FLAGS "${BPFTRACE_FLAGS}" HAVE_BLAZESYM)
+  include_directories(SYSTEM ${LIBBLAZESYM_INCLUDE_DIRS})
 endif()
 
 # Some users have multiple versions of llvm installed and would like to specify
@@ -191,14 +176,24 @@ string(REGEX REPLACE "-rc[0-9]+" "" CLANG_VERSION ${LLVM_PACKAGE_VERSION})
 find_package(Clang ${CLANG_VERSION} REQUIRED)
 include_directories(SYSTEM ${CLANG_INCLUDE_DIRS})
 
-# BPFtrace compile definitions
 
+# Definitions for availability of different libraries and APIs. These are
+# currently packaged into a single `BPFTRACE_FLAGS` variable which can be
+# consumed, but this may be pushed lower if packages and include paths (above)
+# can also be pushed next to dependencies.
 set(BPFTRACE_FLAGS)
 
+set(CMAKE_REQUIRED_DEFINITIONS -D_GNU_SOURCE)
+check_symbol_exists(name_to_handle_at "sys/types.h;sys/stat.h;fcntl.h" HAVE_NAME_TO_HANDLE_AT)
+set(CMAKE_REQUIRED_DEFINITIONS)
 if(HAVE_NAME_TO_HANDLE_AT)
   set(BPFTRACE_FLAGS "${BPFTRACE_FLAGS}" HAVE_NAME_TO_HANDLE_AT=1)
 endif(HAVE_NAME_TO_HANDLE_AT)
 
+# HAVE_BFD_DISASM is used elsewhere, as well as directly here.
+if(${LIBBFD_FOUND} AND ${LIBOPCODES_FOUND})
+  set(HAVE_BFD_DISASM TRUE)
+endif()
 if(HAVE_BFD_DISASM)
   set(BPFTRACE_FLAGS "${BPFTRACE_FLAGS}" HAVE_BFD_DISASM)
   if(LIBBFD_DISASM_FOUR_ARGS_SIGNATURE)
@@ -221,11 +216,11 @@ if(ENABLE_SYSTEMD)
   set(BPFTRACE_FLAGS "${BPFTRACE_FLAGS}" HAVE_LIBSYSTEMD)
 endif()
 
-if(LIBBLAZESYM_FOUND)
-  set(BPFTRACE_FLAGS "${BPFTRACE_FLAGS}" HAVE_BLAZESYM)
-  include_directories(SYSTEM ${LIBBLAZESYM_INCLUDE_DIRS})
-endif()
+# This definition is used by some tests to set flags when generating code, but
+# is not broadly incoprorated into `BPFTRACE_FLAGS`.
+check_include_file("sys/sdt.h" HAVE_SYSTEMTAP_SYS_SDT_H)
 
+# Subdirectories.
 add_subdirectory(src)
 if (BUILD_TESTING)
   add_subdirectory(tests)
@@ -235,6 +230,8 @@ if (ENABLE_MAN)
   add_subdirectory(man)
 endif(ENABLE_MAN)
 
+
+# Miscellaneous install rules and a generic uninstall rule.
 set(BASH_COMPLETION_PATH ${CMAKE_CURRENT_SOURCE_DIR}/scripts/bash-completion/bpftrace)
 install(FILES ${BASH_COMPLETION_PATH} DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/bash-completion/completions)
 
