--- a/tests/data/CMakeLists.txt
+++ b/tests/data/CMakeLists.txt
@@ -35,4 +35,4 @@ embed(
 # BTF doesn't support C++, so we only generate a data_source_cxx executable
 # to run the field_analyser tests on.
 add_executable(data_source_cxx data_source_cxx.cpp)
-target_compile_options(data_source_cxx PRIVATE -g)
+target_compile_options(data_source_cxx PRIVATE -g -Wno-unused-private-field)
