codegen: allow filtering on current cgroup
This is a fairly minimal version, and could be made much better simply
by plumbing the cgroup ancestor level through to the `__in_cgroup` call.

Signed-off-by: Adin Scannell <amscanne@meta.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/4158, branch: user/amscanne/extern_objects/17

--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -29,12 +29,12 @@ add_library(ast STATIC
   passes/control_flow_analyser.cpp
   passes/deprecated.cpp
   passes/field_analyser.cpp
+  passes/filter_pass.cpp
   passes/fold_literals.cpp
   passes/import_scripts.cpp
   passes/link.cpp
   passes/map_sugar.cpp
   passes/macro_expansion.cpp
-  passes/pid_filter_pass.cpp
   passes/portability_analyser.cpp
   passes/printer.cpp
   passes/args_resolver.cpp
