pass: add `LoopReturn` pass
Since all the context building supports scratch variables, supporting
loop returns involved injecting logic directly into the program
structure to support chain-breaking out of loops. The variables use
non-`$` prefixes, and therefore cannot collide with user variables.

They will not be injected unless they are needed.

Note that this commit also tweaks the address space for the context,
ensuring that it is correctly marked as `none` (or BPF).

Signed-off-by: Adin Scannell <amscanne@meta.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/4255, branch: user/amscanne/for_ranges/6

--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -32,6 +32,7 @@ add_library(ast STATIC
   passes/fold_literals.cpp
   passes/import_scripts.cpp
   passes/link.cpp
+  passes/loop_return.cpp
   passes/map_sugar.cpp
   passes/macro_expansion.cpp
   passes/pid_filter_pass.cpp
