--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -40,6 +40,7 @@ add_library(ast STATIC
   passes/args_resolver.cpp
   passes/probe_prune.cpp
   passes/resource_analyser.cpp
+  passes/register_providers.cpp
   passes/semantic_analyser.cpp
   passes/codegen_llvm.cpp
   passes/resolve_imports.cpp
