CMake: Fix ASan build
Using `target_compile_options` applies `-fsanitize=address` only to the
sources of a specific target, not its dependencies. This caused the
option to be missed during the compilation of most source files in the
project, potentially hiding ASAN errors.

Fix the issue by using `add_compile_options` which adds the option to
all compiler invocations within the same CMakeLists.txt, including
sub-directories.

Note that we don't use `add_link_options` to pass `-fsanitize=address`
to the linker since it doesn't work for some reason. Instead, we keep
passing it to the selected targets (`bpftrace` and `bpftrace-aotrt`) via
`target_link_options`.

This also makes one test time out in the CI. The reason is that the
tests forces ClangParser run multiple (10+) iterations of incomplete
type resolution which is somehow slow under ASan on GHA runners.
Disable the test for the sanitizers CI run.

Signed-off-by: Viktor Malik <viktor.malik@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,7 @@ jobs:
           NIX_TARGET: .#bpftrace-llvm21
           BUILD_ASAN: 1
           BUILD_UBSAN: 1
+          RUNTIME_TESTS_FILTER: "-btf.user_supplied_c_def_using_btf"
         - NAME: Fuzzing
           CMAKE_BUILD_TYPE: Debug
           NIX_TARGET: .#bpftrace-fuzz
