--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,12 @@ if(HAVE_BFD_DISASM)
   set(BFD_DISASM_SRC bfd-disasm.cpp)
 endif()
 
+# These add -fsanitize=... to all below compiler invocations, including
+# subdirectories.
+if (BUILD_ASAN)
+  add_compile_options("-fsanitize=address")
+endif()
 if (BUILD_UBSAN)
-  # This adds -fsanitize=undefined to all below compiler invocations, including
-  # subdirectories.
   add_compile_options("-fsanitize=undefined")
 endif()
 
@@ -201,15 +204,13 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR ${CMAKE_CXX_COMPILER_VERSION}
   target_link_libraries(libbpftrace "stdc++fs")
 endif()
 
+# We do not use add_link_options here since it doesn't work for some reason.
+# Instead, just pass -fsanitize=... to the linker when linking the bpftrace
+# target.
 if (BUILD_ASAN)
-  target_compile_options(bpftrace PUBLIC "-fsanitize=address")
   target_link_options(bpftrace PUBLIC "-fsanitize=address")
 endif()
-
 if (BUILD_UBSAN)
-  # We do not use add_link_options here since it doesn't work for some reason.
-  # Instead, just pass -fsanitize=undefined to the linker when linking the
-  # bpftrace target.
   target_link_options(bpftrace PUBLIC "-fsanitize=undefined")
 endif()
 
