arch: migrate to stdlib
This makes the standard arch functions (regs, is_usermode) available as
macros in the standard library that are based on the context. With a
lifted context, these are all useable from loops and nested functions.

The existing arch code is preserved, but only for a single feature:
argument-based watchpoints. In the future this should be ported to a
mechanism that can be expressed in native bpftrace code, then this code
can be removed.

Signed-off-by: Adin Scannell <amscanne@meta.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/4887, branch: user/amscanne/fix_context_plumbing/1

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,7 @@ add_library(runtime STATIC
   probe_types.cpp
   run_bpftrace.cpp
   pcap_writer.cpp
+  tracepoint_format_parser.cpp
   types_format.cpp
   ksyms.cpp
   usyms.cpp
