--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -24,6 +24,7 @@ add_library(ast STATIC
   passes/pre_type_check.cpp
   passes/clang_parser.cpp
   passes/clang_build.cpp
+  passes/context_resolver.cpp
   passes/named_param.cpp
   passes/config_analyser.cpp
   passes/control_flow_analyser.cpp
@@ -38,14 +39,12 @@ add_library(ast STATIC
   passes/pid_filter_pass.cpp
   passes/portability_analyser.cpp
   passes/printer.cpp
-  passes/args_resolver.cpp
   passes/probe_prune.cpp
   passes/resource_analyser.cpp
   passes/type_checker.cpp
   passes/codegen_llvm.cpp
   passes/resolve_imports.cpp
   passes/recursion_check.cpp
-  passes/tracepoint_format_parser.cpp
   passes/type_resolver.cpp
   passes/type_system.cpp
   passes/unstable_feature.cpp
