Split semantic_analyser
Create two separate passes:
- TypeResolver
- TypeChecker

TypeResolver attempts to resolve all
unresolved types but defers errors, when possible,
to the TypeChecker. This includes mismatches
when calling external/internal functions.

This is refactor is to reduce the size
and complexity of semantic_analyser and
create passes with more specific jobs.

Signed-off-by: Jordan Rome <linux@jordanrome.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/4963, branch: user/jordalgo/type_resolver/2
Signed-off-by: Jordan Rome <linux@jordanrome.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -44,7 +44,7 @@ add_executable(bpftrace_test
   result.cpp
   required_resources.cpp
   scopeguard.cpp
-  semantic_analyser.cpp
+  type_checker.cpp
   temp.cpp
   tracepoint_format_parser.cpp
   types.cpp
