providers: add implementation for kernel types
Signed-off-by: Adin Scannell <amscanne@meta.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/4877, branch: user/amscanne/expansion2/8

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,7 @@ add_library(runtime STATIC
   dwarf_parser.cpp
   format_string.cpp
   globalvars.cpp
+  kernel_types.cpp
   log.cpp
   probe_matcher.cpp
   probe_types.cpp
