ast: lift context into a separate variable
This allows the context to be automatically captured and used by
subfunctions, loops, etc. without any code changes. When the args
functions are effectively replaced by macros that refer to the context
directly, this will allow these references to "just work".

Signed-off-by: Adin Scannell <amscanne@meta.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/4936, branch: user/amscanne/fix_context_plumbing/2

--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -31,6 +31,7 @@ add_library(ast STATIC
   passes/field_analyser.cpp
   passes/fold_literals.cpp
   passes/import_scripts.cpp
+  passes/lift_context.cpp
   passes/link.cpp
   passes/loop_return.cpp
   passes/map_sugar.cpp
