dwarf user mode stack unwinding
This adds dwarf unwinding for ustack(). The feature is only available for x64
and llvm >= 21.
Two command line parameters are added: --dwarf-pid (-P) and --dwarf-unwind
(-u). -u enables it in combination with -p and -c, while -P can be used freely
to trace any running process.

Signed-off-by: Arne Jansen <arne@die-jansens.de>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,8 @@ add_library(runtime STATIC
   types_format.cpp
   ksyms.cpp
   usyms.cpp
+  table.cpp
+  dwunwind.cpp
   ${BFD_DISASM_SRC}
 )
 # Ensure flex+bison outputs are built first
