HACK: Resolve build_id stacks through debuginfod
This allows pointing to a debuginfod server without needing full local
debuginfo:

    > sudo \
      DEBUGINFOD_URLS=https://debuginfod.fedoraproject.org/ \
      src/bpftrace \
      -e 'kprobe:do_nanosleep { @[ustack(build_id), comm] = count(); }'
    @[
        __syscall_cancel_arch@/usr/src/debug/glibc-2.42-5.fc43.x86_64/nptl/../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56 (f410d74336e800b1795d2fd97ddfd36c16ad6546 0x7a982)
        __GI___clock_nanosleep@/usr/src/debug/glibc-2.42-5.fc43.x86_64/time/../sysdeps/unix/sysv/linux/clock_nanosleep.c:71 (f410d74336e800b1795d2fd97ddfd36c16ad6546 0xbeb62)
        __GI___nanosleep@/usr/src/debug/glibc-2.42-5.fc43.x86_64/posix/../sysdeps/unix/sysv/linux/nanosleep.c:26 (f410d74336e800b1795d2fd97ddfd36c16ad6546 0xcab37)
        __sleep@/usr/src/debug/glibc-2.42-5.fc43.x86_64/posix/../sysdeps/posix/sleep.c:55 (f410d74336e800b1795d2fd97ddfd36c16ad6546 0xdd08e)
        [inlined] std::unique_lock<std::mutex>::unique_lock(std::mutex&)@/usr/include/c++/15/bits/unique_lock.h:73 (ae7e0e77bce1051e2c1cca21bc75c2589e8b1008 0x2c92a)
        [inlined] workq<std::pair<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, stat> >::wait_idle()@/debuginfod.cxx:922 (ae7e0e77bce1051e2c1cca21bc75c2589e8b1008 0x2c92a)
        thread_main_fts_source_paths@/debuginfod.cxx:5177 (ae7e0e77bce1051e2c1cca21bc75c2589e8b1008 0x2c92a)
        start_thread@/pthread_create.c:448 (f410d74336e800b1795d2fd97ddfd36c16ad6546 0x72464)
        __GI___clone3@/usr/src/debug/glibc-2.42-5.fc43.x86_64/misc/../sysdeps/unix/sysv/linux/x86_64/clone3.S:80 (f410d74336e800b1795d2fd97ddfd36c16ad6546 0xf55ac)
    , traverse]: 2

This is just a hack. Some shortcomings/problems:
- Probably we should also support sending the other stack capturing
  methods through debuginfod (by implementing the necessary
  [blazesym hooks](https://github.com/libbpf/blazesym/blob/035b712/examples/sym-debuginfod/main.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,9 @@ endif()
 find_package(LibElf REQUIRED)
 include_directories(SYSTEM ${LIBELF_INCLUDE_DIRS})
 
+find_package(PkgConfig)
+pkg_check_modules(libdebuginfod REQUIRED IMPORTED_TARGET libdebuginfod)
+
 find_package(LibCereal REQUIRED)
 include_directories(SYSTEM ${LIBCEREAL_INCLUDE_DIRS})
 
