CI: Run sanitizers in a separate job
Instead of running all the CI jobs with just address sanitizer turned
on, turn it off by default and add a new dedicated job with all
sanitizers (ASan and UBSan) on.

The main reason is that the sanitizers add quite a large overhead so it
doesn't make much sense to run them all the time. In addition, with
UBSan enabled, the "btf.user_supplied_c_def_using_btf" runtime test
times out, so we can disable it in the dedicated job only.

N.B.: the overhead is also large with ASan but until now, we haven't
noticed b/c we're only compiling a small subset of .cpp files with ASan.
This is going to be fixed in the following commit.

Signed-off-by: Viktor Malik <viktor.malik@gmail.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/4943, branch: user/viktormalik/fix-asan/5

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,13 @@ jobs:
           CC: clang
           CXX: clang++
           TOOLS_TEST_DISABLE: runqlen.bt
+        - NAME: LLVM 21 + sanitizers
+          CMAKE_BUILD_TYPE: Debug
+          NIX_TARGET: .#bpftrace-llvm21
+          BUILD_ASAN: 1
+          BUILD_UBSAN: 1
+          TOOLS_TEST_DISABLE: runqlen.bt
+          RUNTIME_TESTS_FILTER: "-btf.user_supplied_c_def_using_btf"
         - NAME: Fuzzing
           CMAKE_BUILD_TYPE: Debug
           NIX_TARGET: .#bpftrace-fuzz
