CI: Run sanitizers in a separate job
Instead of running all the CI jobs with sanitizers (ASan and UBSan) on,
turn them off by default and add a new dedicated job with sanitizers on.

The main reason is that ASan adds quite a large overhead so it doesn't
make much sense to run it all the time. In addition, it makes some tests
timeout so this will allow us to skip those tests in the dedicated job
only.

N.B.: the overhead is currently not that bad b/c we're only compiling a
small subset of .cpp files with ASan. This is going to be fixed in the
following commit.

Signed-off-by: Viktor Malik <viktor.malik@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,11 @@ jobs:
           CC: clang
           CXX: clang++
           TOOLS_TEST_DISABLE: runqlen.bt
+        - NAME: LLVM 21 + sanitizers
+          CMAKE_BUILD_TYPE: Debug
+          NIX_TARGET: .#bpftrace-llvm21
+          BUILD_ASAN: 1
+          BUILD_UBSAN: 1
         - NAME: Fuzzing
           CMAKE_BUILD_TYPE: Debug
           NIX_TARGET: .#bpftrace-fuzz
