Move builtin checks to builtins pass
This is part of a larger effort to reduce logic
in semantic_analyser.

Tests also added.

Signed-off-by: Jordan Rome <linux@jordanrome.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/4952, branch: user/jordalgo/builtin_checks/1
Signed-off-by: Jordan Rome <linux@jordanrome.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(bpftrace_test
   bpfbytecode.cpp
   bpftrace.cpp
   btf.cpp
+  builtins.cpp
   child.cpp
   clang_parser.cpp
   named_param.cpp
