Remove BPFTRACE_AVAILABLE_FUNCTIONS_TEST variable and related test data
The environment variable as well as tests associated with it,
does not seems to be used any longer. As CodeQL complains about
using the variable for security reasons, remove it and all unused
test code/data.

Signed-off-by: Stanislaw Gruszka <stf_xl@wp.pl>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -55,7 +55,7 @@ add_test(NAME bpftrace_test COMMAND bpftrace_test)
 file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/near_self_file "near_self_file")
 
 add_subdirectory(data)
-add_dependencies(bpftrace_test data_source_dwarf data_source_btf data_source_funcs parser)
+add_dependencies(bpftrace_test data_source_dwarf data_source_btf parser)
 target_include_directories(bpftrace_test PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 target_include_directories(bpftrace_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
