Refactor TypeResolver pass
This replaces the current type_resolver with an entirely new architecture
for resolving types. It utilizes a constraint solver pattern for resolving
types in a graph.

More details on how all this works in the added readme:
docs/type_resolution.md

There are a few minor things to note:
- For maps where we can't infer the type, presume they are Int64. This is
  for cases where scripts have just `@a++` or `@a += 1` and no other assignment.
  It also means this is ok and prints `0`: `begin { $a = @a; print($a); }`.
- No longer preserve the original ordering of a variable, map key/value, if
  it's a record type. This was probably not working completely in trunk
  anyway but is more visible with how the TypeGraph resolves types.

This fixes this issue:
- https://github.com/bpftrace/bpftrace/issues/4926

There will be follow-up refactoring for both TypeChecker and it's suite of
unit tests. TypeChecker will be moved as another visitor inside of
CreateTypeResolverPass but it left out of this PR for simplicity and
verification that the end behavior hasn't changed.

Signed-off-by: Jordan Rome <linux@jordanrome.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/5007, branch: user/jordalgo/type_graph_callbacks/1
Signed-off-by: Jordan Rome <linux@jordanrome.com>

--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -25,6 +25,8 @@ add_library(ast STATIC
   passes/clang_parser.cpp
   passes/clang_build.cpp
   passes/named_param.cpp
+  passes/ast_transformer.cpp
+  passes/cast_creator.cpp
   passes/config_analyser.cpp
   passes/control_flow_analyser.cpp
   passes/deprecated.cpp
@@ -41,12 +43,13 @@ add_library(ast STATIC
   passes/args_resolver.cpp
   passes/probe_prune.cpp
   passes/resource_analyser.cpp
+  passes/type_applicator.cpp
   passes/type_checker.cpp
+  passes/type_resolver.cpp
   passes/codegen_llvm.cpp
   passes/resolve_imports.cpp
   passes/recursion_check.cpp
   passes/tracepoint_format_parser.cpp
-  passes/type_resolver.cpp
   passes/type_system.cpp
   passes/unstable_feature.cpp
   passes/usdt_arguments.cpp
