Fix wrong kprobe address check
We should only check if function is traceable if there is name for it.
Remove wrong '|| probe.address = 0' check and return early from
AttachedKprobeProbe::make() if there is no name and no address.

Signed-off-by: Stanislaw Gruszka <stf_xl@wp.pl>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(bpftrace_test
   async_action.cpp
   ast.cpp
   ast_matchers.cpp
+  attached_probe.cpp
   attachpoint_passes.cpp
   bpfbytecode.cpp
   bpftrace.cpp
