util: modernize `ChildProc` and move to `util`
This removes the exception paths for `ChildProc` and modernizes the code
slightly. It is then moved into `util` as a general purpose utility,
rather than being specific to the core bpftrace code.

This unifies the code with `ProcMon` (since they share the same
interface) and then aggressively deletes now dead code.

Signed-off-by: Adin Scannell <amscanne@meta.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/4977, branch: user/amscanne/debug_output/2

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -6,12 +6,12 @@ add_library(util STATIC
   elf_parser.cpp
   env.cpp
   int_parser.cpp
-  io.cpp
   kernel.cpp
   math.cpp
   memfd.cpp
   opaque.cpp
   paths.cpp
+  proc.cpp
   result.cpp
   strings.cpp
   symbols.cpp
