Create VariablePreCheck pass
This moves variable usage checks from semantic_analyser to this new pass
further reducing the size and complexity of semantic_analyser. The behavior
is almost identical except that comptime branches are not special cased in
VariablePreCheck pass meaning that we might not get a warning from a
variable assignment that was in a branch that ends up getting pruned. This
feels like a good trade-off to reduce internal complexity.

Signed-off-by: Jordan Rome <linux@jordanrome.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/4986, branch: user/jordalgo/variable_pre_check/1
Signed-off-by: Jordan Rome <linux@jordanrome.com>

--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -48,6 +48,7 @@ add_library(ast STATIC
   passes/type_system.cpp
   passes/unstable_feature.cpp
   passes/usdt_arguments.cpp
+  passes/variable_precheck.cpp
 )
 
 add_dependencies(ast parser)
