symbols: move from `utils` to `symbols`, add `load_btf`
As these APIs become more generalized as the way to query the system for
information, we can move them to their own library. Since they will
generate BTF (added via `load_btf`), this avoids a dependency cycle.

With this move, the names are simplified slightly to be less verbose.

The addition of `load_btf` allows these APIs to be responsible for
locating BTF on the system. For now, this is kept ridiculously simple.

Signed-off-by: Adin Scannell <amscanne@meta.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/4989, branch: user/amscanne/funcidx/4

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -101,9 +101,9 @@ target_link_options(bpftrace BEFORE PRIVATE
 )
 
 
-target_link_libraries(runtime debugfs output tracefs util)
+target_link_libraries(runtime debugfs output symbols tracefs util)
 target_link_libraries(runtime ${LIBBPF_LIBRARIES} ${ZLIB_LIBRARIES})
-target_link_libraries(libbpftrace parser runtime aot ast arch util cxxdemangler_llvm)
+target_link_libraries(libbpftrace parser runtime symbols aot ast arch util cxxdemangler_llvm)
 
 if(LIBPCAP_FOUND)
   target_link_libraries(libbpftrace ${LIBPCAP_LIBRARIES})
@@ -223,5 +223,6 @@ add_subdirectory(cxxdemangler)
 add_subdirectory(debugfs)
 add_subdirectory(output)
 add_subdirectory(stdlib)
+add_subdirectory(symbols)
 add_subdirectory(tracefs)
 add_subdirectory(util)
