Create PreTypeCheck pass
This moves more checks that don't involve types before the type resolving
and checking passes. It adds more visitors to the variable_precheck and
changes the name of this pass to be more general: pre_type_check.

The primary motivation is to have error messages surface earlier so we
don't have to deal with certain error path scenarios (like function
argument count validation) in type passes.

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/5001, branch: user/jordalgo/pre_type_check/1
Signed-off-by: Jordan Rome <linux@jordanrome.com>

--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -21,6 +21,7 @@ add_library(ast STATIC
   passes/attachpoint_passes.cpp
   passes/builtins.cpp
   passes/c_macro_expansion.cpp
+  passes/pre_type_check.cpp
   passes/clang_parser.cpp
   passes/clang_build.cpp
   passes/named_param.cpp
@@ -49,7 +50,6 @@ add_library(ast STATIC
   passes/type_system.cpp
   passes/unstable_feature.cpp
   passes/usdt_arguments.cpp
-  passes/variable_precheck.cpp
 )
 
 add_dependencies(ast parser)
